<resources>
    <string name="app_name">Chat</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_archive">Архив</string>
    <string name="string_profile">Profile</string>
    <string name="hint_sign_up_name">Name</string>
    <string name="hint_sign_up_email">Email</string>
    <string name="hint_sign_up_password">Password</string>
    <string name="text_sign_up_btn">Already has an account?</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="title_archive">Архив</string>
    <string name="btn_save_text">Save</string>
    <string name="btn_sign_out_text">Sign Out</string>
    <string name="surname_hint">Surname</string>
    <string name="first_name_hint">FirstName</string>
</resources>
