<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ru.skillbranch.chat.ui.custom.AspectRationImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_bg"
            android:scaleType="centerCrop"
            app:aspectRatio="1.78"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_normal_16">

            <ImageButton
                android:id="@+id/btn_switch_theme"
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_brightness_high_black_24dp"
                android:layout_toStartOf="@id/iv_avatar"
                android:layout_marginEnd="@dimen/spacing_huge_32"
                android:layout_marginTop="36dp"/>

            <ru.skillbranch.chat.ui.custom.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_outline"
                android:src="@drawable/avatar_default"
                app:cv_borderWidth="2dp"/>

            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_edit_black_24dp"
                tools:ignore="PrivateResource"
                android:layout_marginStart="@dimen/spacing_huge_32"
                android:layout_marginTop="36dp"
                android:layout_toEndOf="@id/iv_avatar"/>

            <TextView
                android:id="@+id/tv_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_avatar"
                android:layout_centerHorizontal="true"
                tools:text="John Doe"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_large_20"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="@dimen/spacing_normal_16"/>

            <TextView
                android:id="@+id/tv_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nick_name"
                android:layout_centerHorizontal="true"
                tools:text="Android Junior Developer"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_normal_16"/>

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/colorAccentedSurface"
        tools:background="@color/color_primary_light">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/spacing_normal_16"
            android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                android:id="@+id/tv_rating"
                style="@style/Profile.Metrics.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_large_20"
                android:text="0"
                android:fontFamily="sans-serif-medium"
                android:drawableStart="@drawable/ic_sp_24"
                android:drawablePadding="@dimen/spacing_tiny_4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_normal_16"
                android:text="@string/profile_label_rating"/>
        </LinearLayout>

        <View android:layout_height="match_parent"
            android:layout_width="1dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:background="@color/color_divider_light"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/spacing_normal_16"
            android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                android:id="@+id/tv_respect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_large_20"
                android:text="0"
                android:fontFamily="sans-serif-medium"
                android:drawableLeft="@drawable/ic_respect_24"
                android:drawablePadding="@dimen/spacing_tiny_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_normal_16"
                android:text="@string/profile_label_respect"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal_16">

        <ImageView
            android:id="@+id/ic_avatar"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_avatar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ic_avatar"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:hint="@string/profile_hint_first_name">

            <EditText
                android:id="@+id/et_first_name"
                style="@style/Profile.EditText.Single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="23dp"
                android:backgroundTint="#14ffffff"
                tools:text="John" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ic_avatar"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_below="@id/wr_first_name"
            android:hint="@string/profile_hint_last_name">

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Doe"
                android:paddingTop="20dp"
                style="@style/Profile.EditText.Single"
                android:backgroundTint="#14ffffff"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorDivider"
        android:layout_marginStart="@dimen/space_maximum_72"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_normal_16">

        <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_about"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="false"
            app:counterMaxLength="128"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:hint="@string/profile_hint_about"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                style="@style/Profile.EditText.MultiLine"
                android:backgroundTint="#14ffffff"
                android:paddingTop="21dp"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorDivider"
        android:layout_marginStart="@dimen/space_maximum_72"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_normal_16">


        <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_repo"
            android:contentDescription="TODO" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:id="@+id/wr_repository"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16"
            android:layout_weight="1"
            android:hint="@string/profile_hint_repository"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:imeOptions="actionDone"
                tools:text="github.hognDoe"
                style="@style/Profile.EditText.Single"
                android:backgroundTint="#14ffffff"
                />



        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_eye"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:src="@drawable/ic_eye24dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>
